# StructuralOptimizationUsingGA

./: GA_Bajan_Ramona.docx  README.md
SpringSchoolGA/: .gitignore  CMakeLists.txt  README.md
SpringSchoolGA/inc/: Scene.h
SpringSchoolGA/inc/GeneticAlgorithm/: GeneticAlgorithm.h  IIndividual.h  Individual.h  UtilFunctions.h
SpringSchoolGA/inc/GraphicalObjects/: BodyReference.h  Building.h  ObjectProperties.h
SpringSchoolGA/inc/Services/: AlgorithmSettings.h  GeneticAlgorithmService.h  IOIndividualManager.h  RandomNumbersGenerator.h  constants.h
SpringSchoolGA/inc/System/: ConfigureSystem.h
SpringSchoolGA/src/: Main.cpp  Scene.cpp
SpringSchoolGA/src/GeneticAlgorithm/: GeneticAlgorithm.cpp  Individual.cpp  UtilFunctions.cpp
SpringSchoolGA/src/GraphicalObjects/: BodyReference.cpp  Building.cpp  ObjectProperties.cpp
SpringSchoolGA/src/Services/: AlgorithmSettings.cpp  GeneticAlgorithmService.cpp  IOIndividualManager.cpp  RandomNumbersGenerator.cpp
SpringSchoolGA/src/System/: ConfigureSystem.cpp
